<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/novasOpcoes"
        android:icon="@drawable/ic_more_options1"
        android:title="@string/mais_opcoes"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/menu_item_novo"
                android:title="@string/novo"
                android:icon="@drawable/ic_menu_item_novo"
                />
            <item
                android:id="@+id/menu_item_receber_dados"
                android:icon="@drawable/ic_menu_item_receber_dados"
                android:title="@string/disciplinas"
                />
            <item
                android:id="@+id/menu_item_preferencias"
                android:title="@string/preferencias"
                android:icon="@drawable/ic_menu_item_preferencias"
                />
        </menu>


    </item>


</menu>